@@ -268,12 +268,13 @@ drawable_flip_cmd_callback (GtkAction *action,
     gimp_image_undo_group_start (image, GIMP_UNDO_GROUP_TRANSFORM,
                                  GIMP_ITEM_GET_CLASS (item)->flip_desc);
 
-  gimp_item_flip (item, context, (GimpOrientationType) value, axis, FALSE);
+  gimp_item_flip (item, context,
+                  (GimpOrientationType) value, axis, FALSE);
 
   if (gimp_item_get_linked (item))
     {
-      gimp_item_linked_flip (item, context, (GimpOrientationType) action, axis,
-                             FALSE);
+      gimp_item_linked_flip (item, context,
+                             (GimpOrientationType) value, axis, FALSE);
       gimp_image_undo_group_end (image);
     }
 
